# simple-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  a.out  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json  prep-build-dir
.devcontainer/base-clang/: Dockerfile  devcontainer.json  http_apt_llvm_org_trixie.sources  x86_64-unknown-linux-gnu.conf
.devcontainer/base-clang-instrumented/: Dockerfile
.devcontainer/base-clang-instrumented/conan-config/profiles/: clang-debug  clang-test
.devcontainer/base-clang-libcpp/: Dockerfile  devcontainer.json
.devcontainer/base-clang-libstdcpp/: Dockerfile  devcontainer.json
.devcontainer/base-clang-libstdcpp/conan-config/profiles/: clang-libstdcpp-test
.devcontainer/base-clang/conan-config/: settings_user.yml
.devcontainer/base-clang/conan-config/profiles/: clang-debug  clang-release  clang-test  clang-test-fuzzer  clang-test-tsan  clang-tidy
.devcontainer/base-gcc/: Dockerfile  devcontainer.json
.devcontainer/base-gcc/conan-config/profiles/: gcc-debug  gcc-release  gcc-test
.devcontainer/clang-base/: Dockerfile  devcontainer.json  lint
.devcontainer/clang-base/conan-config/profiles/: clang-debug
.devcontainer/clang-debug/: Dockerfile  devcontainer.json
.devcontainer/clang-libcpp-analyze/: devcontainer.json
.devcontainer/clang-libcpp-debug/: devcontainer.json
.devcontainer/clang-libcpp-release/: devcontainer.json
.devcontainer/clang-libcpp-test/: devcontainer.json
.devcontainer/clang-libcpp-test-tsan/: devcontainer.json
.devcontainer/clang-libstdcpp-test/: devcontainer.json
.devcontainer/clang-lint/: devcontainer.json
.devcontainer/clang-release/: Dockerfile  devcontainer.json
.devcontainer/clang-test/: Dockerfile  devcontainer.json
.devcontainer/clang-test-fuzzer/: devcontainer.json
.devcontainer/clang-test-tsan/: devcontainer.json
.devcontainer/clang-tidy/: Dockerfile  devcontainer.json
.devcontainer/conan-config/: global.conf  settings_user.yml
.devcontainer/conan-config/profiles/: clang-debug  clang-release  clang-test  clang-test-fuzzer  clang-test-tsan  clang-tidy  gcc-debug  gcc-release  gcc-test
.devcontainer/gcc-base/: Dockerfile  devcontainer.json
.devcontainer/gcc-base/conan-config/profiles/: gcc-test
.devcontainer/gcc-debug/: Dockerfile  devcontainer.json
.devcontainer/gcc-release/: Dockerfile  devcontainer.json
.devcontainer/gcc-test/: Dockerfile  devcontainer.json
.devcontainer/images/clang/: Dockerfile
.devcontainer/images/clang/conan-config/profiles/: clang-debug  clang-test  clang-tidy
.devcontainer/images/gcc/: Dockerfile
.devcontainer/images/gcc/conan-config/: settings_user.yml
.devcontainer/images/gcc/conan-config/profiles/: gcc-debug  gcc-test
.devcontainer/lint/: devcontainer.json  lint
.github/: dependabot.yml
.github/workflows/: ci-test.yml  cpp-test.yml  provoke.yml  push.yml
.github/workflows/ci-test/: CMakeLists.txt  trigger.cppcoreguidelines-avoid-goto.cpp  trigger.data-race.cpp  trigger.unused-label.cpp
.github/workflows/ci-test/data-race/: CMakeLists.txt  data-race.cpp
.github/workflows/ci-test/goto/: CMakeLists.txt
.github/workflows/ci-test/integer-overflow/: CMakeLists.txt  integer-overflow.cpp
.github/workflows/ci-test/unused-label/: CMakeLists.txt  unused-label.cpp
.github/workflows/ci-test/vector-overflow/: CMakeLists.txt  vector-overflow.cpp
scripts/: build  clean  gcovr.cfg  install  report  test
scripts/profiles/: clang-debug  clang-release  clang-test  clang-test-fuzzer  clang-test-tsan  clang-tidy  gcc-debug  gcc-gcov  gcc-test
src/: CMakeLists.txt  fmt.cpp  reflection-demo.cpp  rummikub.cpp  rummikub.fuzz-test.cpp  rummikub.unit-test.cpp  simple.cpp  simple.fuzz-test.cpp  simple.h  simple.hpp  simple.unit-test.cpp
src/ci-test/: CMakeLists.txt  trigger.data-race.cpp  trigger.vector-overflow.cpp
src/include/simple/: simple.h
src/provocative/: CMakeLists.txt  cppcoreguidelines-avoid-goto.cpp  provoke.missing-return.cpp
